--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['issue_response_time', 'mail_lists', 'mailing_list_jobs']\n",
+      "['issue_response_time', 'mail_lists', 'mail_lists_sentiment_scores', 'mailing_list_jobs']\n",
       "          project\n",
       "0      aalldp-dev\n",
       "1  archetypes-dev\n"
@@ -77,8 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def write_message(file,repo,type_archive,mail_check,pos,time=None):\n",
@@ -95,8 +97,6 @@
     "            print(\"Right here\")\n",
     "            continue            \n",
     "        elif(type_archive == 'not_new' and mess_check > time):\n",
-    "            print(\"sigh\")\n",
-    "            mess_check = Piper.convert_date(message['data']['Date'])\n",
     "            mail_check[pos] = 'update'\n",
     "            \n",
     "        ID = message['data']['Message-ID']\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -182,8 +182,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-02 09:55:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 2016-03-24 20:37:11\n",
-      "2018-07-02 09:55:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 2016-03-24 20:37:11\n"
+      "2018-07-06 11:29:56 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 2016-03-24 20:37:11\n",
+      "2018-07-06 11:29:56 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 2016-03-24 20:37:11\n"
      ]
     },
     {
@@ -197,16 +197,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-02 09:55:56 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO 1/1 MBoxes downloaded\n",
-      "2018-07-02 09:55:56 keanu-Inspiron-5567 perceval.backends.core.mbox[5251] INFO Done. 1/1 messages fetched; 0 ignored\n",
-      "2018-07-02 09:55:56 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Fetch process completed\n"
+      "2018-07-06 11:29:58 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO 1/1 MBoxes downloaded\n",
+      "2018-07-06 11:29:58 keanu-Inspiron-5567 perceval.backends.core.mbox[6599] INFO Done. 1/1 messages fetched; 0 ignored\n",
+      "2018-07-06 11:29:58 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Fetch process completed\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigh\n",
+      "Right here\n",
       "Checking to see for updated messages\n"
      ]
     },
@@ -214,8 +214,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-02 09:55:58 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 2018-04-18 09:11:16\n",
-      "2018-07-02 09:55:58 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 2018-04-18 09:11:16\n"
+      "2018-07-06 11:30:02 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 2018-04-18 09:11:16\n",
+      "2018-07-06 11:30:02 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 2018-04-18 09:11:16\n"
      ]
     },
     {
@@ -229,18 +229,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO 1/1 MBoxes downloaded\n",
-      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.mbox[5251] INFO Done. 1/1 messages fetched; 0 ignored\n",
-      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Fetch process completed\n",
-      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/announce/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/announce/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-07-06 11:30:09 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO 1/1 MBoxes downloaded\n",
+      "2018-07-06 11:30:09 keanu-Inspiron-5567 perceval.backends.core.mbox[6599] INFO Done. 1/1 messages fetched; 0 ignored\n",
+      "2018-07-06 11:30:09 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Fetch process completed\n",
+      "2018-07-06 11:30:09 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/announce/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-07-06 11:30:09 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/announce/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigh\n",
+      "Right here\n",
       "Checking to see for updated messages\n"
      ]
     },
@@ -248,9 +248,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-02 09:56:07 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO 7/7 MBoxes downloaded\n",
-      "2018-07-02 09:56:07 keanu-Inspiron-5567 perceval.backends.core.mbox[5251] INFO Done. 12/12 messages fetched; 0 ignored\n",
-      "2018-07-02 09:56:07 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Fetch process completed\n"
+      "2018-07-06 11:30:17 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO 7/7 MBoxes downloaded\n",
+      "2018-07-06 11:30:17 keanu-Inspiron-5567 perceval.backends.core.mbox[6599] INFO Done. 12/12 messages fetched; 0 ignored\n",
+      "2018-07-06 11:30:17 keanu-Inspiron-5567 perceval.backends.core.pipermail[6599] INFO Fetch process completed\n"
      ]
     },
     {
@@ -266,7 +266,7 @@
       "getting\n",
       "getting\n",
       "Created File announce\n",
-      "{'aalldp-dev': 'update', 'archetypes-dev': 'update', 'announce': 'new'}\n",
+      "{'aalldp-dev': False, 'archetypes-dev': False, 'announce': 'new'}\n",
       "Finished downloading files\n"
      ]
     }
