--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import augur\n",
@@ -41,12 +43,21 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#connect.db.execute(\"\"\"DROP TABLE mailing_list_jobs\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['issue_response_time', 'mail_lists', 'mailing_list_jobs']\n",
+      "['issue_response_time', 'mail_lists', 'mail_lists_sentiment_scores', 'mailing_list_jobs']\n",
       "          project\n",
       "0      aalldp-dev\n",
       "1  archetypes-dev\n"
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,15 +200,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-11 11:46:48 keanu-Inspiron-5567 perceval.backends.core.pipermail[20291] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 2018-07-06 18:39:58\n",
-      "2018-07-11 11:46:48 keanu-Inspiron-5567 perceval.backends.core.pipermail[20291] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 2018-07-06 18:39:58\n"
+      "2018-07-13 11:27:04 keanu-Inspiron-5567 perceval.backends.core.pipermail[6612] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 2018-07-11 10:19:16\n",
+      "2018-07-13 11:27:04 keanu-Inspiron-5567 perceval.backends.core.pipermail[6612] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 2018-07-11 10:19:16\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-07-06 18:39:58\n",
+      "2018-07-11 10:19:16\n",
       "<class 'pandas._libs.tslib.Timestamp'>\n"
      ]
     },
@@ -205,9 +216,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-11 11:46:50 keanu-Inspiron-5567 perceval.backends.core.pipermail[20291] INFO 1/2 MBoxes downloaded\n",
-      "2018-07-11 11:46:50 keanu-Inspiron-5567 perceval.backends.core.mbox[20291] INFO Done. 1/1 messages fetched; 0 ignored\n",
-      "2018-07-11 11:46:50 keanu-Inspiron-5567 perceval.backends.core.pipermail[20291] INFO Fetch process completed\n"
+      "2018-07-13 11:27:06 keanu-Inspiron-5567 perceval.backends.core.pipermail[6612] INFO 1/2 MBoxes downloaded\n",
+      "2018-07-13 11:27:06 keanu-Inspiron-5567 perceval.backends.core.mbox[6612] INFO Done. 1/1 messages fetched; 0 ignored\n",
+      "2018-07-13 11:27:06 keanu-Inspiron-5567 perceval.backends.core.pipermail[6612] INFO Fetch process completed\n"
      ]
     },
     {
@@ -222,8 +233,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-11 11:46:53 keanu-Inspiron-5567 perceval.backends.core.pipermail[20291] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 2018-04-18 09:11:16\n",
-      "2018-07-11 11:46:53 keanu-Inspiron-5567 perceval.backends.core.pipermail[20291] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 2018-04-18 09:11:16\n"
+      "2018-07-13 11:27:09 keanu-Inspiron-5567 perceval.backends.core.pipermail[6612] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 2018-04-18 09:11:16\n",
+      "2018-07-13 11:27:09 keanu-Inspiron-5567 perceval.backends.core.pipermail[6612] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 2018-04-18 09:11:16\n"
      ]
     },
     {
@@ -238,9 +249,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-11 11:46:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[20291] INFO 1/1 MBoxes downloaded\n",
-      "2018-07-11 11:46:54 keanu-Inspiron-5567 perceval.backends.core.mbox[20291] INFO Done. 1/1 messages fetched; 0 ignored\n",
-      "2018-07-11 11:46:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[20291] INFO Fetch process completed\n"
+      "2018-07-13 11:27:12 keanu-Inspiron-5567 perceval.backends.core.pipermail[6612] INFO 1/1 MBoxes downloaded\n",
+      "2018-07-13 11:27:12 keanu-Inspiron-5567 perceval.backends.core.mbox[6612] INFO Done. 1/1 messages fetched; 0 ignored\n",
+      "2018-07-13 11:27:12 keanu-Inspiron-5567 perceval.backends.core.pipermail[6612] INFO Fetch process completed\n"
      ]
     },
     {
@@ -329,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -360,12 +371,12 @@
     "session = Session()\n",
     "res = session.query(table).all()\n",
     "\n",
-    "Piper.make(connect.db,mail_check,mail_list,mail_lists,res)"
+    "Piper.make(connect.db,mail_check,mail_list,mail_lists,res,session)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -393,7 +404,7 @@
        "'from sqlalchemy.ext.declarative import declarative_base\\nBase = declarative_base(connect.db)\\nclass table(Base):\\n    __tablename__ = \\'mailing_list_jobs\\'\\n    __table_args__={\\'autoload\\':True}\\n\\nSession = sessionmaker(bind=connect.db)\\nsession = Session()\\nres = session.query(table).all()\\nprint(res)\\nres[0].last_message_date = Piper.convert_date(\"Thu, 24 Mar 2019 20:37:11 +0000\")\\nsession.commit()\\n#ALTER TABLE mailing_list_jobs ADD pk_column INT AUTO_INCREMENT PRIMARY KEY;'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
