--- a/notebooks/github_issues_scores.ipynb
+++ b/notebooks/github_issues_scores.ipynb
@@ -39,8 +39,8 @@
     "augurApp = augur.Application('../augur.config.json')\n",
     "connect = augurApp.ghtorrentplus()\n",
     "DB_STR = 'mysql+pymysql://{}:{}@{}:{}/{}?charset=utf8'.format(\n",
-    "            '', '', '',\\\n",
-    "            '', ''\n",
+    "            'derek', 'picklehead5000', 'ghdata.sociallycompute.io',\\\n",
+    "            '3306', 'chaoss'\n",
     "        )\n",
     "db = s.create_engine(DB_STR)"
    ]
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['github_issues', 'github_issues_sentiment_scores', 'issue_response_time', 'mail_lists', 'mail_lists_sentiment_scores', 'mailing_list_jobs']\n"
+      "['github_issues', 'issue_response_time', 'mail_lists', 'mail_lists_sentiment_scores', 'mailing_list_jobs']\n"
      ]
     }
    ],
@@ -150,6 +150,7 @@
     "            #if(scores['compound'] < 0.1):\n",
     "            #    print(sentence,scores['compound'])\n",
     "        avg = compound/part\n",
+    "        avg = round(avg,3)\n",
     "        if(avg == 0):\n",
     "            sentiment = \"Neutral\"\n",
     "        elif(avg < 0):\n",
@@ -303,7 +304,7 @@
       "2044                       Call with V8 team, reloaded.  closed    issue   \n",
       "\n",
       "     issue_number   timestamp   issue_id          user  \\\n",
-      "0               1  1532008641  159398443         rvagg   \n",
+      "0               1  1532348853  159398443         rvagg   \n",
       "1               1   159398443          1   vkurchatkin   \n",
       "2               1   159398443          1         rvagg   \n",
       "3               1   159398443          1    benjamingr   \n",
@@ -311,7 +312,7 @@
       "5               1   159398443          1         Trott   \n",
       "6               1   159398443          1       joshgav   \n",
       "7               1   159398443          1         Trott   \n",
-      "8              14  1532008645  177963101         Trott   \n",
+      "8              14  1532348857  177963101         Trott   \n",
       "9              14   177963101         14       jasnell   \n",
       "10             14   177963101         14   Fishrock123   \n",
       "11             14   177963101         14      addaleax   \n",
@@ -329,13 +330,13 @@
       "23             14   177963101         14      mhdawson   \n",
       "24             14   177963101         14         Trott   \n",
       "25             14   177963101         14  williamkapke   \n",
-      "26              3  1532008648  159406239         rvagg   \n",
+      "26              3  1532348860  159406239         rvagg   \n",
       "27              3   159406239          3    benjamingr   \n",
       "28              3   159406239          3      ofrobots   \n",
       "29              3   159406239          3       jasnell   \n",
       "...           ...         ...        ...           ...   \n",
       "2015          174   254699866        174         Trott   \n",
-      "2016          173  1532008980  254528050    ronkorving   \n",
+      "2016          173  1532349131  254528050    ronkorving   \n",
       "2017          173   254528050        173    benjamingr   \n",
       "2018          173   254528050        173    benjamingr   \n",
       "2019          173   254528050        173       jasnell   \n",
@@ -346,10 +347,10 @@
       "2024          173   254528050        173    benjamingr   \n",
       "2025          173   254528050        173    hueniverse   \n",
       "2026          173   254528050        173         Trott   \n",
-      "2027          165  1532008981  252416246       jasnell   \n",
+      "2027          165  1532349131  252416246       jasnell   \n",
       "2028          165   252416246        165         rvagg   \n",
       "2029          165   252416246        165         Trott   \n",
-      "2030           76  1532008982  211180643      hashseed   \n",
+      "2030           76  1532349131  211180643      hashseed   \n",
       "2031           76   211180643         76      hashseed   \n",
       "2032           76   211180643         76       joshgav   \n",
       "2033           76   211180643         76      hashseed   \n",
@@ -429,12 +430,12 @@
       "2044           Agreed a new issue probably makes sense.  \n",
       "\n",
       "[2045 rows x 13 columns]\n",
-      "     score sentiment\n",
-      "0 -0.24068  Negative\n",
-      "1  0.20280  Positive\n",
-      "2  0.11540  Positive\n",
-      "3  0.22630  Positive\n",
-      "4  0.81590  Positive\n"
+      "   score sentiment\n",
+      "0 -0.241  Negative\n",
+      "1  0.203  Positive\n",
+      "2  0.115  Positive\n",
+      "3  0.226  Positive\n",
+      "4  0.816  Positive\n"
      ]
     }
    ],
@@ -464,18 +465,18 @@
       "4          5       GitHub  https://github.com/nodejs/CTC  nodejs  CTC   \n",
       "\n",
       "                 subject  status category issue_number   timestamp   issue_id  \\\n",
-      "0  Purpose of nodejs/CTC  closed    issue            1  1532008641  159398443   \n",
+      "0  Purpose of nodejs/CTC  closed    issue            1  1532348853  159398443   \n",
       "1  Purpose of nodejs/CTC  closed    issue            1   159398443          1   \n",
       "2  Purpose of nodejs/CTC  closed    issue            1   159398443          1   \n",
       "3  Purpose of nodejs/CTC  closed    issue            1   159398443          1   \n",
       "4  Purpose of nodejs/CTC  closed    issue            1   159398443          1   \n",
       "\n",
-      "          user                                               body    score  \\\n",
-      "0        rvagg  @nodejs/collaborators I'm not sure if this is ... -0.24068   \n",
-      "1  vkurchatkin             > Core Technical Team (CTC)\\n\\nTypo?\\n  0.20280   \n",
-      "2        rvagg                       blerh, yes, fixing, thanks\\n  0.11540   \n",
-      "3   benjamingr  If I want to being an issue to the CTC's atten...  0.22630   \n",
-      "4   benjamingr  > Issues that Node.js needs to begin consideri...  0.81590   \n",
+      "          user                                               body  score  \\\n",
+      "0        rvagg  @nodejs/collaborators I'm not sure if this is ... -0.241   \n",
+      "1  vkurchatkin             > Core Technical Team (CTC)\\n\\nTypo?\\n  0.203   \n",
+      "2        rvagg                       blerh, yes, fixing, thanks\\n  0.115   \n",
+      "3   benjamingr  If I want to being an issue to the CTC's atten...  0.226   \n",
+      "4   benjamingr  > Issues that Node.js needs to begin consideri...  0.816   \n",
       "\n",
       "  sentiment  \n",
       "0  Negative  \n",
