--- a/notebooks/github-issues.ipynb
+++ b/notebooks/github-issues.ipynb
@@ -20,12 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "if(\"notebooks\" not in os.getcwd()):\n",
+    "    os.chdir(\"notebooks\")\n",
     "augurApp = augur.Application('../augur.config.json')\n",
-    "list1,path = augurApp.github_issues()\n",
+    "connect,list1,path = augurApp.github_issues()\n",
+    "token = list1[5]\n",
     "DB_STR = 'mysql+pymysql://{}:{}@{}:{}/{}?charset=utf8'.format(\n",
     "            list1[0], list1[1], list1[2],\\\n",
     "            list1[3], list1[4]\n",
@@ -35,13 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "runtime/git_repos.csv\n",
+      "yeah\n",
+      "owner,repo_url\n",
+      "\n",
+      "nodejs,\"CTC\"\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if \"notebooks\" in os.getcwd():\n",
     "    os.chdir(\"..\")\n",
-    "path = os.getcwd() + '/runtime/git_repos.csv'\n",
+    "connect,list1,path = augurApp.github_issues()\n",
     "print(path)\n",
     "if(not os.path.exists(path)):\n",
     "    file = open(path, \"w+\")\n",
@@ -50,10 +66,17 @@
     "    print(\"yeah\")\n",
     "if (os.stat(path).st_size == 0):\n",
     "    file.write(\"owner,repo_url\\n\")\n",
-    "    #file.write(\"nodejs,\\\"CTC\\\"\\n\")\n",
+    "    file.write(\"nodejs,\\\"CTC\\\"\\n\")\n",
     "    #file.write(\"https://lists.opendaylight.org/pipermail/,\\\"archetypes-dev\\\"\\n\")\n",
     "    print(\"Please enter the mailing lists and the links for them please\")\n",
-    "    print(\"Going to the default mailing lists\")"
+    "    print(\"Going to the default mailing lists\")\n",
+    "\n",
+    "count = 0\n",
+    "for line in file:\n",
+    "    print(line)\n",
+    "    count+=1\n",
+    "    if(count == 2):\n",
+    "        break"
    ]
   },
   {
@@ -66,11 +89,11 @@
    "source": [
     "# Url for the git repo to analyze\n",
     "#repo_url = 'https://github.com/chaoss/grimoirelab-perceval'\n",
-    "repo_url = 'CTC'\n",
+    "#repo_url = 'CTC'\n",
     "# Directory for letting Perceval clone the git repo\n",
     "#repo_dir = 'CTC'\n",
-    "token = 'e3f0dd3ccf0174ba4fe351c7c12a275b666f2c34'\n",
-    "own = 'nodejs'\n",
+    "#token = 'e3f0dd3ccf0174ba4fe351c7c12a275b666f2c34'\n",
+    "#own = 'nodejs'\n",
     "# ElasticSearch instance (url)\n",
     "#repo = 'grimoirelab-perceval'\n",
     "\n",
