--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -29,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if(\"notebooks\" not in os.getcwd()):\n",
@@ -42,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#connect.db.execute(\"\"\"DROP TABLE mailing_list_jobs\"\"\")"
@@ -57,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['github_issues', 'issue_response_time', 'mail_lists_sentiment_scores']\n",
+      "['github_issues', 'github_issues_sentiment_scores', 'github_pull_requests', 'github_pull_requests_sentiment_scores', 'github_repo_jobs', 'issue_response_time']\n",
       "Created Table\n"
      ]
     }
@@ -108,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def write_message(repo,type_archive,mail_check,pos,db,res,session,archives,numb,mail_lists,time=None):\n",
@@ -213,6 +219,8 @@
     "        #outfile.write(obj)\n",
     "        #outfile.write('\\n')  \n",
     "    #outfile.close()\n",
+    "    if(bool(di)):\n",
+    "        numb,mail_lists = Piper.make(connect.db,mail_check,archives,mail_lists,res,session,di,numb)\n",
     "    return numb,mail_lists\n",
     "    "
    ]
@@ -228,8 +236,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-18 14:40:18 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-07-18 14:40:18 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-08-01 16:50:02 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-08-01 16:50:02 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
@@ -250,9 +258,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-18 14:40:21 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO 2/2 MBoxes downloaded\n",
-      "2018-07-18 14:40:21 keanu-Inspiron-5567 perceval.backends.core.mbox[19902] INFO Done. 6/6 messages fetched; 0 ignored\n",
-      "2018-07-18 14:40:21 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Fetch process completed\n"
+      "2018-08-01 16:50:07 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO 2/2 MBoxes downloaded\n",
+      "2018-08-01 16:50:07 keanu-Inspiron-5567 perceval.backends.core.mbox[18033] INFO Done. 6/6 messages fetched; 0 ignored\n",
+      "2018-08-01 16:50:07 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Fetch process completed\n"
      ]
     },
     {
@@ -266,15 +274,19 @@
       "4\n",
       "['aalldp-dev']\n",
       "2018-07-06 18:39:58\n",
-      "File uploaded  13\n"
+      "File uploaded  13\n",
+      "Mailing List Job uploaded\n",
+      "Finished\n",
+      "['aalldp-dev']\n",
+      "File uploaded  4\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-18 14:40:31 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-07-18 14:40:31 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-08-01 16:50:31 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-08-01 16:50:31 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
@@ -290,9 +302,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-07-18 14:40:34 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO 1/1 MBoxes downloaded\n",
-      "2018-07-18 14:40:34 keanu-Inspiron-5567 perceval.backends.core.mbox[19902] INFO Done. 2/2 messages fetched; 0 ignored\n",
-      "2018-07-18 14:40:34 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Fetch process completed\n"
+      "2018-08-01 16:50:33 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO 1/1 MBoxes downloaded\n",
+      "2018-08-01 16:50:33 keanu-Inspiron-5567 perceval.backends.core.mbox[18033] INFO Done. 2/2 messages fetched; 0 ignored\n",
+      "2018-08-01 16:50:33 keanu-Inspiron-5567 perceval.backends.core.pipermail[18033] INFO Fetch process completed\n"
      ]
     },
     {
@@ -302,51 +314,15 @@
       "getting\n",
       "1\n",
       "['archetypes-dev']\n",
-      "File uploaded  4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-07-18 14:40:44 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Looking for messages from 'https://lore.kernel.org/lkml/' since 2013-01-01 20:37:11\n",
-      "2018-07-18 14:40:44 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Downloading mboxes from 'https://lore.kernel.org/lkml/' to since 2013-01-01 20:37:11\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "File uploaded  4\n",
+      "Mailing List Job uploaded\n",
+      "Finished\n",
+      "['archetypes-dev']\n",
+      "File uploaded  4\n",
       "Mailing List Job uploaded\n",
       "Finished\n",
       "Created File archetypes-dev\n",
       "{'aalldp-dev': 'new', 'archetypes-dev': 'new'}\n",
-      "Finished downloading files\n",
-      "['lkml'] mail_list\n",
-      "{'lkml': False}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-07-18 14:43:17 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO 92/92 MBoxes downloaded\n",
-      "2018-07-18 14:43:17 keanu-Inspiron-5567 perceval.backends.core.mbox[19902] INFO Done. 2/2 messages fetched; 0 ignored\n",
-      "2018-07-18 14:43:17 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Fetch process completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting\n",
-      "1\n",
-      "['lkml']\n",
-      "File uploaded  4\n",
-      "Mailing List Job uploaded\n",
-      "Finished\n",
-      "Created File lkml\n",
-      "{'lkml': 'new'}\n",
       "Finished downloading files\n"
      ]
     }
@@ -425,116 +401,6 @@
     "                print(\"Checking to see for updated messages\")\n",
     "        print(mail_check)\n",
     "        print(\"Finished downloading files\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Base = declarative_base(connect.db)\\nclass table(Base):\\n    __tablename__ = 'mailing_list_jobs'\\n    __table_args__={'autoload':True}\\n    \\nSession = sessionmaker(bind=connect.db)\\nsession = Session()\\nres = session.query(table).all()\\n\\nPiper.make(connect.db,mail_check,mail_list,mail_lists,res,session)\""
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''Base = declarative_base(connect.db)\n",
-    "class table(Base):\n",
-    "    __tablename__ = 'mailing_list_jobs'\n",
-    "    __table_args__={'autoload':True}\n",
-    "    \n",
-    "Session = sessionmaker(bind=connect.db)\n",
-    "session = Session()\n",
-    "res = session.query(table).all()\n",
-    "\n",
-    "Piper.make(connect.db,mail_check,mail_list,mail_lists,res,session)'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#print(mail_lists)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-07-18 15:45:08 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Looking for messages from 'https://kernel.googlesource.com/pub/scm/public-inbox/vger.kernel.org/lkml/0' since 2018-07-01 20:37:11\n",
-      "2018-07-18 15:45:08 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Downloading mboxes from 'https://kernel.googlesource.com/pub/scm/public-inbox/vger.kernel.org/lkml/0' to since 2018-07-01 20:37:11\n",
-      "2018-07-18 15:45:09 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO 0/0 MBoxes downloaded\n",
-      "2018-07-18 15:45:09 keanu-Inspiron-5567 perceval.backends.core.mbox[19902] INFO Done. 0/0 messages fetched; 0 ignored\n",
-      "2018-07-18 15:45:09 keanu-Inspiron-5567 perceval.backends.core.pipermail[19902] INFO Fetch process completed\n"
-     ]
-    }
-   ],
-   "source": [
-    "repo = Pipermail(url=\"https://kernel.googlesource.com/pub/scm/public-inbox/vger.kernel.org/lkml/0\",\\\n",
-    "                 dirpath=\"tmp/archives/temp1\")\n",
-    "di = {}\n",
-    "for message in repo.fetch(from_date = Piper.convert_date(\"Thu, 1 Jul 2018 20:37:11 +0000\")):\n",
-    "    print(message)\n",
-    "    print(\"\\n\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#di[0]['data']['Date']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"dict = {}\\ndi1 = {0:2}\\ndict[0] = 0\\nprint(dict)\\ndict['b'] = 1\\nprint(dict)\\ndict['d'] = di1\\nprint(dict)\\nprint(dict[0])\\nprint(len(dict))\""
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''dict = {}\n",
-    "di1 = {0:2}\n",
-    "dict[0] = 0\n",
-    "print(dict)\n",
-    "dict['b'] = 1\n",
-    "print(dict)\n",
-    "dict['d'] = di1\n",
-    "print(dict)\n",
-    "print(dict[0])\n",
-    "print(len(dict))'''"
    ]
   }
  ],
